--- a/tests/machine learning/applied ml/test.ipynb
+++ b/tests/machine learning/applied ml/test.ipynb
@@ -97,6 +97,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StandardScaler(copy=True, with_mean=True, with_std=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "data = [[0, 0], [0, 0], [1, 1], [1, 1]]\n",
+    "scaler = StandardScaler()\n",
+    "data_normalized = scaler.fit(data)\n",
+    "print(data_normalized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5 0.5]\n",
+      "[[5. 5.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scaler.mean_)\n",
+    "#print(scaler.transform(data))\n",
+    "print(scaler.transform([[3, 3]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
