--- a/tests/machine learning/text mining/Module 2 (Python 3).ipynb
+++ b/tests/machine learning/text mining/Module 2 (Python 3).ipynb
@@ -23,6 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n",
       "*** Introductory Examples for the NLTK Book ***\n",
       "Loading text1, ..., text9 and sent1, ..., sent9\n",
       "Type the name of the text or sentence to view it.\n",
@@ -73,9 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sent1: Call me Ishmael .\n",
+      "sent2: The family of Dashwood had long been settled in Sussex .\n",
+      "sent3: In the beginning God created the heaven and the earth .\n",
+      "sent4: Fellow - Citizens of the Senate and of the House of Representatives :\n",
+      "sent5: I have a problem with people PMing me to lol JOIN\n",
+      "sent6: SCENE 1 : [ wind ] [ clop clop clop ] KING ARTHUR : Whoa there !\n",
+      "sent7: Pierre Vinken , 61 years old , will join the board as a nonexecutive director Nov. 29 .\n",
+      "sent8: 25 SEXY MALE , seeks attrac older single lady , for discreet encounters .\n",
+      "sent9: THE suburb of Saffron Park lay on the sunset side of London , as red and ragged as a cloud of sunset .\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -99,18 +115,19 @@
        " '.']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "sents()\n",
     "sent7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +136,7 @@
        "18"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,27 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100676"
+       "nltk.text.Text"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(text7)"
+    "len(text7)\n",
+    "# type(text7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +177,7 @@
        "12408"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,25 +188,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['bottom',\n",
-       " 'Richmond',\n",
-       " 'tension',\n",
-       " 'limits',\n",
-       " 'Wedtech',\n",
-       " 'most',\n",
-       " 'boost',\n",
-       " '143.80',\n",
-       " 'Dale',\n",
-       " 'refunded']"
+       "['good',\n",
+       " 'began',\n",
+       " 'spends',\n",
+       " 'leveraging',\n",
+       " 'Syndicate',\n",
+       " 'Jenrette',\n",
+       " 'One',\n",
+       " 'enclosed',\n",
+       " 'Nancy',\n",
+       " 'regime']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +233,7 @@
        "12408"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +277,7 @@
        "20"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +305,7 @@
        " 'program']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,53 +366,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Lemmatization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Universal',\n",
-       " 'Declaration',\n",
-       " 'of',\n",
-       " 'Human',\n",
-       " 'Rights',\n",
-       " 'Preamble',\n",
-       " 'Whereas',\n",
-       " 'recognition',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'inherent',\n",
-       " 'dignity',\n",
-       " 'and',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'equal',\n",
-       " 'and',\n",
-       " 'inalienable',\n",
-       " 'rights',\n",
-       " 'of']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "udhr = nltk.corpus.udhr.words('English-Latin1')\n",
-    "udhr[:20]"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -402,26 +373,7 @@
     {
      "data": {
       "text/plain": [
-       "['univers',\n",
-       " 'declar',\n",
-       " 'of',\n",
-       " 'human',\n",
-       " 'right',\n",
-       " 'preambl',\n",
-       " 'wherea',\n",
-       " 'recognit',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'inher',\n",
-       " 'digniti',\n",
-       " 'and',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'equal',\n",
-       " 'and',\n",
-       " 'inalien',\n",
-       " 'right',\n",
-       " 'of']"
+       "'have'"
       ]
      },
      "execution_count": 24,
@@ -430,7 +382,14 @@
     }
    ],
    "source": [
-    "[porter.stem(t) for t in udhr[:20]] # Still Lemmatization"
+    "porter.stem(\"haved\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lemmatization"
    ]
   },
   {
@@ -459,11 +418,90 @@
        " 'equal',\n",
        " 'and',\n",
        " 'inalienable',\n",
-       " 'right',\n",
+       " 'rights',\n",
        " 'of']"
       ]
      },
      "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "udhr = nltk.corpus.udhr.words('English-Latin1')\n",
+    "udhr[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['univers',\n",
+       " 'declar',\n",
+       " 'of',\n",
+       " 'human',\n",
+       " 'right',\n",
+       " 'preambl',\n",
+       " 'wherea',\n",
+       " 'recognit',\n",
+       " 'of',\n",
+       " 'the',\n",
+       " 'inher',\n",
+       " 'digniti',\n",
+       " 'and',\n",
+       " 'of',\n",
+       " 'the',\n",
+       " 'equal',\n",
+       " 'and',\n",
+       " 'inalien',\n",
+       " 'right',\n",
+       " 'of']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[porter.stem(t) for t in udhr[:20]] # Still Lemmatization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Universal',\n",
+       " 'Declaration',\n",
+       " 'of',\n",
+       " 'Human',\n",
+       " 'Rights',\n",
+       " 'Preamble',\n",
+       " 'Whereas',\n",
+       " 'recognition',\n",
+       " 'of',\n",
+       " 'the',\n",
+       " 'inherent',\n",
+       " 'dignity',\n",
+       " 'and',\n",
+       " 'of',\n",
+       " 'the',\n",
+       " 'equal',\n",
+       " 'and',\n",
+       " 'inalienable',\n",
+       " 'right',\n",
+       " 'of']"
+      ]
+     },
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -600,17 +638,31 @@
      "text": [
       "MD: modal auxiliary\n",
       "    can cannot could couldn't dare may might must need ought shall should\n",
-      "    shouldn't will would\n"
+      "    shouldn't will would\n",
+      "CC: conjunction, coordinating\n",
+      "    & 'n and both but either et for less minus neither nor or plus so\n",
+      "    therefore times v. versus vs. whether yet\n",
+      "JJ: adjective or numeral, ordinal\n",
+      "    third ill-mannered pre-war regrettable oiled calamitous first separable\n",
+      "    ectoplasmic battery-powered participatory fourth still-to-be-named\n",
+      "    multilingual multi-disciplinary ...\n",
+      "NN: noun, common, singular or mass\n",
+      "    common-carrier cabbage knuckle-duster Casino afghan shed thermostat\n",
+      "    investment slide humour falloff slick wind hyena override subhumanity\n",
+      "    machinist ...\n"
      ]
     }
    ],
    "source": [
-    "nltk.help.upenn_tagset('MD')"
+    "nltk.help.upenn_tagset('MD')\n",
+    "nltk.help.upenn_tagset('CC')\n",
+    "nltk.help.upenn_tagset('JJ')\n",
+    "nltk.help.upenn_tagset('NN')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +680,7 @@
        " ('.', '.')]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +706,7 @@
        " ('nuisance', 'NN')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +756,7 @@
        "<Grammar with 13 productions>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +846,7 @@
        "[('The', 'DT'), ('old', 'JJ'), ('man', 'NN'), ('the', 'DT'), ('boat', 'NN')]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +871,7 @@
        " ('furiously', 'RB')]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,6 +880,15 @@
     "text19 = nltk.word_tokenize(\"Colorless green ideas sleep furiously\")\n",
     "nltk.pos_tag(text19)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -846,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
