--- a/tests/machine learning/social network/Graph Features.ipynb
+++ b/tests/machine learning/social network/Graph Features.ipynb
@@ -106,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Initialize the dataframe, using the nodes as the index\n",
@@ -965,7 +967,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Initialize the dataframe, using the edges as the index\n",
@@ -2448,9 +2452,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Conda (root)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "root"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
