--- a/materials/deeplearning/Python+Basics+With+Numpy+v3.ipynb
+++ b/materials/deeplearning/Python+Basics+With+Numpy+v3.ipynb
@@ -38,7 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "### START CODE HERE ### (≈ 1 line of code)\n",
+    "test = \"Hello World\"\n",
+    "### END CODE HERE ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -51,20 +64,6 @@
      ]
     }
    ],
-   "source": [
-    "### START CODE HERE ### (≈ 1 line of code)\n",
-    "test = \"Hello World\"\n",
-    "print(\"test: \" + test)\n",
-    "### END CODE HERE ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
     "print (\"test: \" + test)"
    ]
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -120,7 +119,7 @@
    "source": [
     "# GRADED FUNCTION: basic_sigmoid\n",
     "\n",
-    "import math\n",
+    "import numpy as np\n",
     "\n",
     "def basic_sigmoid(x):\n",
     "    \"\"\"\n",
@@ -134,7 +133,7 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE ### (≈ 1 line of code)\n",
-    "    s = None\n",
+    "    s =  1 / (1 + math.exp(-x))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return s"
@@ -142,11 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9525741268224334"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "basic_sigmoid(3)"
    ]
